rack3/traefik_/ref/httproute.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80

---
# this gateway references the cluster issuer (in annotations) we've already set up with dns challenge
# the gateway references the automatically-created Certificate in its certificateRefs
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: <whatever this issuer name is>
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.example.com'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: example-com-tls
            namespace: envoy-gateway-system
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
  hostnames:
    - 'whoami.chenn.io'
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: whoami
          port: 80

---
# failed
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-dash-http
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
  hostnames:
    - longhorn.chenn.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: longhorn-reference-grant
  namespace: longhorn-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
  to:
    - group: ''
      kind: Service
